Alteração no css
Alterei o estilo das mudanças feitas em html

--- a/index/style.css
+++ b/index/style.css
@@ -11,6 +11,10 @@ body {
 }
 
 /* Navbar */
+.nav-items a {
+  text-decoration: none;
+  color: white;
+}
 .navbar {
   background: #343434;
   display: flex;
